--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <html>
     
     <head>
-        <title>Project title goes here</title>
+        <title>My Blog</title>
+        <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" name="viewport">
         <link rel="stylesheet" type="text/css" href="/public/components/App.css" />
     </head>
 
